@@ -1,3 +1,8 @@
+2003-06-06  Eric B. Weddington  <eric@ecentral.com>
+
+	* include/avr/boot.h: Add file. Provides new bootloader support API.
+	* NEWS: Add note about new bootloader support API.
+
 2003-06-05  Eric B. Weddington  <eric@ecentral.com>
 
 	* include/avr/pgmspace.h: Add __volatile__ to asm macros to fix optimizer
